--- a/src/CasinoGame/CasinoGame.API/CasinoGame.API.csproj
+++ b/src/CasinoGame/CasinoGame.API/CasinoGame.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
       <PrivateAssets>all</PrivateAssets>
@@ -20,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CasinoGame.Core\CasinoGame.Core.csproj" />
     <ProjectReference Include="..\CasinoGame.DataAccess\CasinoGame.DataAccess.csproj" />
+    <ProjectReference Include="..\CasinoGame.Models\CasinoGame.Models.csproj" />
   </ItemGroup>
 
 
