--- a/src/CasinoGame/CasinoGame.Models/CasinoGame.Models.csproj
+++ b/src/CasinoGame/CasinoGame.Models/CasinoGame.Models.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CasinoGame.DataAccess\CasinoGame.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
